<resources>
    <string name="app_name">My Application_v3</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="_14_00_16_00">14:00-16:00</string>
    <string name="_16_00_18_00">16:00-18:00</string>
    <string name="hetfo">Hétfő</string>
    <string name="kedd">Kedd</string>
    <string name="szerda">Szerda</string>
    <string name="csutortok">Csütörtök</string>
    <string name="_8_00_10_00">8:00-10:00</string>
    <string name="pentek">péntek</string>
    <string name="szombat">szombat</string>
    <string name="vasarnap">vasárnap</string>
    <string name="textview">TextView</string>
    <string name="textview1">TextView</string>
    <string name="alma">Alma</string>
    <string name="textview2">TextView</string>
    <string name="textview3">TextView</string>
    <string-array name="Nap">
        <item>Hétfő</item>
        <item>Kedd</item>
        <item>Szerda</item>
        <item>Csütörtök</item>
        <item>Péntek</item>
        <item>Szombat</item>
        <item>Vasárnap</item>
    </string-array>


    <string name="hello_blank_fragment">Hello blank fragment</string>
   
    <string name="ra_neve">Óra neve:*</string>
    <string name="ra_kezdete">Óra kezdete:*</string>
    <string name="ra_v_ge">Óra vége:*</string>
    <string name="h_t">Hét:</string>
    <string name="mutat">Mutat</string>
    <string name="tan_r">Tanár:</string>
    <string name="tanterem">Tanterem:</string>
    <string name="be_r">Beír</string>

    <string name="m_dos_t">Módosít</string>
    <string name="t_r_l">Töröl</string>
    <string name="tov_bb">Tovább</string>
    <string name="kihagy">Kihagy</string>
    <string name="a_h_t">A hét</string>
    <string name="b_h_t">B hét</string>
    <string name="_8_00_n_n9_00_n_n10_00_n_n11_00_n_n12_00_n_n13_00_n_n14_00_n_n15_00_n_n16_00_n_n17_00_n_n18_00_n_n19_00_n_n20_00_n_n21_00_n_n22_00_n_n23_00_n">8:00\n______\n9:00\n______\n10:00\n______\n11:00\n______\n12:00\n______\n13:00\n______\n14:00\n______\n15:00\n______\n16:00\n______\n17:00\n______\n18:00\n______\n19:00\n______\n20:00\n______\n21:00\n______\n22:00\n______\n23:00\n______</string>
    <string name="rarend_kisiskol_soknak">Órarend kisiskolásoknak</string>
    <string name="norm_l_rarend">Normál órarend</string>
    <string name="v_lassz_egy_opci_t_az_al_bbiak_k_z_l">Válassz egy opciót az alábbiak közül!</string>
    <string name="dv_z_l_az_j_rarend_alkalmaz_s">Üdvözöl az új órarend alkalmazás!</string>
    <string name="egy_rarend_ami_mindig_k_zn_l_lesz">Egy órarend, ami mindig kéznél lesz! :)</string>
    <string name="a_megszokott_l_kicsit_elt_r_de_egyszer_en_kezelhet">A megszokottól kicsit eltérő, de egyszerűen kezelhető.</string>
    <string name="b_rmilyen_koroszt_ly_sz_m_ra">(Bármilyen korosztály számára)</string>
    <string name="ra_hozz_ad_s_hoz_kattints_erre_az_ikonra">Óra hozzáadásához kattints erre az ikonra!</string>
    <string name="t_bb_koroszt_ly_t_bb_t_pus_rarend">Több korosztály, több típusú órarend!</string>
    <string name="ha_egy_adott_nap_r_it_szeretn_d_kilist_zni_koppints_a_nap_nev_re">Ha egy adott nap óráit szeretnéd kilistázni, koppints a nap nevére!</string>
    <string name="nek">Ének</string>
    <string name="ra_be_ll_t_sai">Óra beállításai</string>
    <string name="be_ll_t_sok">Beállítások</string>
    <string name="a">A</string>
    <string name="b">B</string>

</resources>
