<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".Szerkeszt_seged2"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >
<android.support.constraint.ConstraintLayout

    android:layout_width="match_parent"
    android:layout_height="wrap_content"

    >

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginTop="40dp"
        android:text="@string/ra_neve"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editText4"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:autofillHints=""
        android:ems="10"
        android:enabled="false"
        android:inputType="textPersonName"
        android:text=""
        android:visibility="invisible"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />
    <LinearLayout
        android:id="@+id/lin1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        android:layout_marginTop="140dp"
        android:orientation="horizontal"

        app:layout_constraintTop_toBottomOf="@+id/editText4"
        >
        <TextView
            android:id="@+id/textView2"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginStart="0dp"

            android:text="@string/ra_kezdete"
            />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"

            android:gravity="center"
            android:text="@string/ra_v_ge"


            />

        <TextView
            android:id="@+id/textView7"
            android:layout_width="0dp"
            android:layout_height="wrap_content"

            android:layout_weight="1"

            android:gravity="center"
            android:text="@string/h_t"
            android:visibility="visible" />
    </LinearLayout>
    <LinearLayout
        android:id="@+id/lin2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        android:orientation="horizontal"

        app:layout_constraintTop_toBottomOf="@+id/lin1">
        <EditText
            android:id="@+id/editText5"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:inputType="time"
            android:focusableInTouchMode="false"
            android:focusable="false"
            android:layout_marginTop="10dp"
            />
        <EditText
            android:id="@+id/editText6"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:inputType="time"
            android:focusableInTouchMode="false"
            android:focusable="false"
            android:layout_marginTop="10dp"
            />
        <LinearLayout
            android:layout_width="0dp"
            android:layout_weight="1"
            android:gravity="center"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/a"/>

            <Switch
                android:id="@+id/switch3"
                android:layout_width="40dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="0dp"
                android:enabled="true"

                android:gravity="center"
                android:textOff="@string/a"
                android:textOn="@string/b"
                android:visibility="visible" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/b"/>
        </LinearLayout>

    </LinearLayout>
    <Spinner
        android:id="@+id/spinner3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        app:layout_constraintEnd_toEndOf="parent"
        android:entries="@array/Nap"
        android:layout_marginTop="20dp"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lin2" />


    <LinearLayout
        android:id="@+id/lin3"
        android:layout_marginTop="40dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@+id/spinner3">

        <TextView
            android:id="@+id/textView12"
            android:layout_width="match_parent"
            android:layout_weight="1"
            android:layout_height="match_parent"

            android:gravity="center"
            android:text="Tanár:"
            />
        <EditText
            android:id="@+id/editText9"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:layout_marginEnd="40dp"
            android:layout_weight="1"
            android:ems="10"
            android:inputType="textPersonName"

            />
        <TextView
            android:id="@+id/textView13"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/tanterem"
            />
        <EditText
            android:id="@+id/editText10"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:layout_marginEnd="40dp"
            android:ems="10"
            android:inputType="textPersonName"
            />




    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_marginTop="40dp"
        app:layout_constraintTop_toBottomOf="@+id/lin3">
        <Button
            android:id="@+id/button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:enabled="true"
            android:text="@string/m_dos_t"

            />

        <Button
            android:id="@+id/button2"

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="23dp"
            android:enabled="true"
            android:text="@string/t_r_l"

            />
    </LinearLayout>




    <Spinner
        android:id="@+id/spinner2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        android:layout_marginTop="5dp"
        android:visibility="invisible"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:layout_constraintTop_toTopOf="@+id/editText4" />
</android.support.constraint.ConstraintLayout>
</ScrollView>